# Life-Support-Expert

./: .gitignore  agent_core.py  app.py  astronauts.db  beverage.db  beverage_ratings.csv  beverages.csv  crew.csv  db_setup.ipynb  db_utils.py  debug.ipynb  docker-compose.yml  dockerfile  engine.py  engine_rebuild.ipynb  food_ratings.csv  gas_budget.db  meal_schedule.db  medical_expert.py  memory_store.json  memory_store.py  notes.docx  nutrition.db  orchestrator.py  planner copy 2.py  planner copy.py  planner.py  pyproject.toml  requirements.txt  sandbox.py  tavily_search.py  tool_handlers.py  toolkit.py
static/css/: base.css
templates/: chat.html  index.html  meal_calendar.html  meal_plan.html  medical_assistant.html  setup_foods.html  upload_beverage_csv.html  upload_food_csv.html
uploads/: entree_nutrition_data.csv  food_nutrition_data.csv
